<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#311B92"
    tools:context="com.example.dany.contactsapp.MainActivity">

    <ImageView
        android:id="@+id/mPlayerImageView"
        android:layout_width="253dp"
        android:layout_height="203dp"
        android:layout_marginBottom="144dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ratingBar"
        app:srcCompat="@drawable/andres" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="16dp">

        <TextView
            android:id="@+id/nameLabelTextView"
            android:layout_width="176dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/name_label"
            android:textColor="#FAFAFA" />

        <TextView
            android:id="@+id/playerNameTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"

            android:textColor="#FAFAFA" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="15dp"
        android:layout_marginTop="32dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="16dp">

        <TextView
            android:id="@+id/positionLabelTextView"
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/location_label"
            android:textColor="#FAFAFA" />

        <TextView
            android:id="@+id/contactPositionTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:textColor="#FAFAFA" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="15dp"
        android:layout_marginTop="68dp"
        android:orientation="horizontal"
        android:textColor="#FAFAFA"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="0dp">

        <TextView
            android:id="@+id/skillLabelTextView"
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/skill_label"
            android:textColor="#FAFAFA" />

        <TextView
            android:id="@+id/contactSkillTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:textColor="#FAFAFA" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:orientation="horizontal"
        android:textColor="#FAFAFA"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="16dp">

        <TextView
            android:id="@+id/positionEditLabelTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/location_edit_label"
            android:textColor="#FAFAFA" />

        <EditText
            android:id="@+id/positionEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:text=""
            android:textColor="#FAFAFA" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="76dp"
        android:textColor="#FAFAFA"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_editor_absoluteX="0dp">

        <Button
            android:id="@+id/prevButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/btnPrevious"
            app:layout_constraintTop_toBottomOf="@+id/mPlayerImageView"
            tools:layout_editor_absoluteX="32dp" />

        <Button
            android:id="@+id/nextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="52dp"
            android:layout_marginTop="8dp"
            android:text="@string/btnNext"
            app:layout_constraintStart_toEndOf="@+id/prevButton"
            app:layout_constraintTop_toBottomOf="@+id/mPlayerImageView" />
    </LinearLayout>

    <RatingBar
        android:id="@+id/ratingBar"
        style="@style/Base.Widget.AppCompat.RatingBar"
        android:layout_width="240dp"
        android:layout_height="50dp"
        android:layout_marginBottom="244dp"
        android:background="@android:color/darker_gray"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
        tools:layout_editor_absoluteX="33dp" />

</android.support.constraint.ConstraintLayout>
